fix overflow and remove user select (highlighting)

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  user-select: none;
+}
 html {
   background-color: #010116;
+  width: 100%;
+  height: 100%;
+}
+body {
+  overflow-x: hidden;
 }
 @layer base {
   :root {
